--- a/src/gui.glade
+++ b/src/gui.glade
@@ -294,7 +294,7 @@ You should have received a copy of the GNU General Public License along with blo
                         <child>
                           <object class="GtkLabel" id="config_1v1_label_startingrow1">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">Starting Row: </property>
+                            <property name="label" translatable="yes">Starting row: </property>
                           </object>
                           <packing>
                             <property name="top_attach">1</property>
@@ -306,7 +306,7 @@ You should have received a copy of the GNU General Public License along with blo
                         <child>
                           <object class="GtkLabel" id="config_1v1_label_startingcol1">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">Column: </property>
+                            <property name="label" translatable="yes">column: </property>
                           </object>
                           <packing>
                             <property name="left_attach">2</property>
@@ -525,7 +525,7 @@ You should have received a copy of the GNU General Public License along with blo
                         <child>
                           <object class="GtkLabel" id="config_1v1_label_startingrow2">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">Starting Row: </property>
+                            <property name="label" translatable="yes">Starting row: </property>
                           </object>
                           <packing>
                             <property name="top_attach">1</property>
@@ -557,7 +557,7 @@ You should have received a copy of the GNU General Public License along with blo
                         <child>
                           <object class="GtkLabel" id="config_1v1_label_startingcol2">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">Column: </property>
+                            <property name="label" translatable="yes">column: </property>
                           </object>
                           <packing>
                             <property name="left_attach">2</property>
@@ -823,7 +823,7 @@ You should have received a copy of the GNU General Public License along with blo
                                 <child>
                                   <object class="GtkLabel" id="newgame_1v1_label_startingrow1">
                                     <property name="visible">True</property>
-                                    <property name="label" translatable="yes">Starting Row: </property>
+                                    <property name="label" translatable="yes">Starting row: </property>
                                   </object>
                                   <packing>
                                     <property name="top_attach">1</property>
@@ -835,7 +835,7 @@ You should have received a copy of the GNU General Public License along with blo
                                 <child>
                                   <object class="GtkLabel" id="newgame_1v1_label_startingcol1">
                                     <property name="visible">True</property>
-                                    <property name="label" translatable="yes">Column: </property>
+                                    <property name="label" translatable="yes">column: </property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">2</property>
@@ -1054,7 +1054,7 @@ You should have received a copy of the GNU General Public License along with blo
                                 <child>
                                   <object class="GtkLabel" id="newgame_1v1_label_startingrow2">
                                     <property name="visible">True</property>
-                                    <property name="label" translatable="yes">Starting Row: </property>
+                                    <property name="label" translatable="yes">Starting row: </property>
                                   </object>
                                   <packing>
                                     <property name="top_attach">1</property>
@@ -1086,7 +1086,7 @@ You should have received a copy of the GNU General Public License along with blo
                                 <child>
                                   <object class="GtkLabel" id="newgame_1v1_label_startingcol2">
                                     <property name="visible">True</property>
-                                    <property name="label" translatable="yes">Column: </property>
+                                    <property name="label" translatable="yes">column: </property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">2</property>
@@ -1265,8 +1265,209 @@ You should have received a copy of the GNU General Public License along with blo
                   <object class="GtkHBox" id="newgame_totalalloc_hbox">
                     <property name="visible">True</property>
                     <property name="spacing">2</property>
+                    <child>
+                      <object class="GtkFrame" id="newgame_totalalloc_frame_board">
+                        <property name="visible">True</property>
+                        <property name="label_xalign">0</property>
+                        <child>
+                          <object class="GtkAlignment" id="alignment9">
+                            <property name="visible">True</property>
+                            <property name="top_padding">10</property>
+                            <property name="bottom_padding">10</property>
+                            <property name="left_padding">12</property>
+                            <child>
+                              <object class="GtkTable" id="newgame_totalalloc_table_board">
+                                <property name="visible">True</property>
+                                <property name="n_columns">4</property>
+                                <child>
+                                  <object class="GtkLabel" id="newgame_totalalloc_label_nrows">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes">Number of rows: </property>
+                                  </object>
+                                  <packing>
+                                    <property name="x_options"></property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkSpinButton" id="newgame_totalalloc_spinbutton_nrows">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="max_length">2</property>
+                                    <property name="invisible_char">&#x25CF;</property>
+                                    <property name="width_chars">2</property>
+                                    <property name="snap_to_ticks">True</property>
+                                    <property name="numeric">True</property>
+                                    <property name="wrap">True</property>
+                                    <property name="update_policy">if-valid</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">1</property>
+                                    <property name="right_attach">2</property>
+                                    <property name="x_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="newgame_totalalloc_label_ncols">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes">columns: </property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">2</property>
+                                    <property name="right_attach">3</property>
+                                    <property name="x_options"></property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkSpinButton" id="newgame_totalalloc_spinbutton_ncols">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="max_length">2</property>
+                                    <property name="invisible_char">&#x25CF;</property>
+                                    <property name="width_chars">2</property>
+                                    <property name="snap_to_ticks">True</property>
+                                    <property name="numeric">True</property>
+                                    <property name="wrap">True</property>
+                                    <property name="update_policy">if-valid</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">3</property>
+                                    <property name="right_attach">4</property>
+                                    <property name="x_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                        <child type="label">
+                          <object class="GtkLabel" id="newgame_totalalloc_label_board">
+                            <property name="visible">True</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Board size&lt;/b&gt;</property>
+                            <property name="use_markup">True</property>
+                          </object>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkFrame" id="newgame_totalalloc_frame_starting">
+                        <property name="visible">True</property>
+                        <property name="label_xalign">0</property>
+                        <child>
+                          <object class="GtkAlignment" id="alignment10">
+                            <property name="visible">True</property>
+                            <property name="top_padding">10</property>
+                            <property name="bottom_padding">10</property>
+                            <property name="left_padding">12</property>
+                            <child>
+                              <object class="GtkTable" id="newgame_totalalloc_table_starting">
+                                <property name="visible">True</property>
+                                <property name="n_rows">2</property>
+                                <property name="n_columns">4</property>
+                                <child>
+                                  <object class="GtkLabel" id="newgame_totalalloc_label_startingrow">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes">Starting row: </property>
+                                  </object>
+                                  <packing>
+                                    <property name="top_attach">1</property>
+                                    <property name="bottom_attach">2</property>
+                                    <property name="x_options"></property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkSpinButton" id="newgame_totalalloc_spinbutton_startingrow">
+                                    <property name="visible">True</property>
+                                    <property name="sensitive">False</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="max_length">2</property>
+                                    <property name="invisible_char">&#x25CF;</property>
+                                    <property name="width_chars">2</property>
+                                    <property name="snap_to_ticks">True</property>
+                                    <property name="numeric">True</property>
+                                    <property name="wrap">True</property>
+                                    <property name="update_policy">if-valid</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">1</property>
+                                    <property name="right_attach">2</property>
+                                    <property name="top_attach">1</property>
+                                    <property name="bottom_attach">2</property>
+                                    <property name="x_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="newgame_totalalloc_label_startingcol">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes">column: </property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">2</property>
+                                    <property name="right_attach">3</property>
+                                    <property name="top_attach">1</property>
+                                    <property name="bottom_attach">2</property>
+                                    <property name="x_options"></property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkSpinButton" id="newgame_totalalloc_spinbutton_startingcol">
+                                    <property name="visible">True</property>
+                                    <property name="sensitive">False</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="max_length">2</property>
+                                    <property name="invisible_char">&#x25CF;</property>
+                                    <property name="width_chars">2</property>
+                                    <property name="snap_to_ticks">True</property>
+                                    <property name="numeric">True</property>
+                                    <property name="wrap">True</property>
+                                    <property name="update_policy">if-valid</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">3</property>
+                                    <property name="right_attach">4</property>
+                                    <property name="top_attach">1</property>
+                                    <property name="bottom_attach">2</property>
+                                    <property name="x_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkCheckButton" id="newgame_totalalloc_checkbutton_startingpos">
+                                    <property name="label" translatable="yes">Start from anywhere</property>
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="receives_default">False</property>
+                                    <property name="active">True</property>
+                                    <property name="draw_indicator">True</property>
+                                  </object>
+                                  <packing>
+                                    <property name="right_attach">4</property>
+                                  </packing>
+                                </child>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                        <child type="label">
+                          <object class="GtkLabel" id="newgame_totalalloc_label_starting">
+                            <property name="visible">True</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Starting position&lt;/b&gt;</property>
+                            <property name="use_markup">True</property>
+                          </object>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
                   </object>
                   <packing>
+                    <property name="expand">False</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
